# Chip8

./: .clang-tidy  CMakeLists.txt  flake.nix
ch8-apps/: test-1.ch8
include/: app-renderer.hpp  app-window.hpp  chip8-spec.hpp  decode-instruction.hpp  decode-types.hpp  device.hpp  execute-instructions.hpp  lua-instance.hpp  memory-buffer.hpp  program-counter.hpp  register.hpp  screen-buffer.hpp  timer.hpp
lua/: config.lua
nix/: cmake-profiles.nix  lua-build.nix  sdl3-build.nix
src/: app-renderer.cpp  app-window.cpp  decode-instruction.cpp  device.cpp  execute-instructions.cpp  lua-instance.cpp  main.cpp  memory-buffer.cpp  program-counter.cpp  screen-buffer.cpp  timer.cpp
